# monorepo

./: .bazelignore  .bazelrc  .cursorrules  .dev-requirements.txt  .gitignore  .markdownlint.jsonc  .pip-requirements.txt  .pre-commit-config.yaml  .pyproject.toml  AGENTS.md  BAZEL_8_UPGRADE.md  BUILD.bazel  BUILD_FIXES.md  CHEATSHEET.md  CHEATSHEET_BAZEL.md  CONTAINER_README.md  CONTRIBUTE_APPLICATION.md  CONTRIBUTE_IAC_COMPONENTS.md  COPIER_UPDATE.md  LICENSE  MODULE.bazel  MODULE.bazel.bak  MODULE.bazel.bak2  Makefile  README-rate-limiting.md  README.md  README_ORIGINAL.md  ROADMAP.md  UPDATE_REQUIREMENTS_NEEDED.md  WORKSPACE.bazel  WORKSPACE.bzlmod  _WORKSPACE.bazel  _WORKSPACE.bzlmod  module_excerpt.txt  quick-start-guide.md  run.sh  skaffold.env  skaffold.yaml  sonar-project.properties  targets.txt
.circleci/: config.yml
libs/calculator/: .pyproject.toml  BUILD.bazel  README.md  calculator_test.py
libs/calculator/tests/: calculator_test.py
libs/echo/: BUILD.bazel  echo.py
libs/echo/src/: echo.py
libs/echo/tests/: echo_test.py
libs/py/calculator/: BUILD.bazel
libs/py/calculator/tests/: calculator_test.py
libs/py/devops/: BUILD.bazel
libs/py/devops/models/: devops.py
libs/py/devops/tests/: devops_test.py
libs/py/echo/: BUILD.bazel
libs/py/echo/models/: echo.py
libs/py/echo/tests/: echo_test.py
projects/base/base_fastapi_app/: BUILD.bazel  README.md
projects/base/base_fastapi_app/app/: main.py
projects/bazel/: .BUILD.bazel  README.md
projects/bazel/files/: README.md
projects/example2_java_app/: BUILD.bazel  README.md
projects/hello_springboot_app/: BUILD.bazel  README.md  skaffold.yaml
projects/hello_springboot_app/kustomize/base/: application.properties
projects/hello_springboot_app/oci/: container_test.yaml
projects/hello_springboot_app/scripts/: build.sh
projects/java/example1_java_app/: BUILD.bazel  README.md  skaffold.yaml
projects/java/example1_java_app/kubernetes/: job.yaml
projects/java/example2_java_app/: BUILD.bazel  skaffold.yaml
projects/java/example2_java_app/kubernetes/: job.yaml
projects/java/example2_java_app/oci/: container_test.yaml
projects/java/rs_springboot_app/: BUILD.bazel  DEVELOPER_SKAFFOLD.md  README.md  author.txt  build_image.sh  demoapp_dupeclass_allowlist.txt  info.txt  remote_debug.sh  run.sh  skaffold.yaml  smoke_test.sh
projects/java/simple_java_app/: BUILD.bazel  README.md  skaffold.yaml
projects/py-calculator-cli-app/: BUILD.bazel
projects/py-echo-fastapi-app/: BUILD.bazel  README.md  run.py  test.py
projects/py-echo-fastapi-app/tests/: test.py
projects/py/awesome_fastapi_app/: .env.example  .gitignore  Dockerfile  EXTERNAL-DNS.md  ISTIO-TROUBLESHOOTING.md  README.md  SKAFFOLD-USAGE.md  WORKSPACE.bazel  alembic.ini  build_image.sh  mutmut.ini  pyproject.toml  pytest.ini  requirements.txt  sample_seed_data.json  skaffold.env  skaffold.yaml  test_seed_data.json
projects/py/calculator_cli_py_app/: BUILD.bazel  README.md  pyproject.toml  skaffold.yaml  sonar-project.properties
projects/py/calculator_flask_app/: .cursorrules  BUILD.bazel  README.md  pyproject.toml  pytest.ini  skaffold.yaml
projects/py/devops_fastapi_app/: .cursorrules  BUILD.bazel  README.md  __init__.py  pyproject.toml  pytest.ini  skaffold.yaml
projects/py_devops_fastapi_app/: BUILD.bazel  build.sh  skaffold.yaml
projects/py_devops_fastapi_app/app/: main.py  web_app.py
projects/py_devops_fastapi_app/helm-charts/: Chart.yaml  values.yaml
projects/py_devops_fastapi_app/kubernetes/: deployment.yaml  k8s-pod.yaml
projects/py_devops_fastapi_app/kustomize/: _kustomization.yaml
projects/py_devops_fastapi_app/tests/: container_test.yaml  web_app_test.py
projects/py_devops_fastapi_app/tmp/: _WORKSPACE.bazel
projects/py_echo_fastapi_app/: BUILD.bazel
projects/py_echo_fastapi_app/src/: run.py  webapp.py
projects/py_echo_fastapi_app/tests/: main_test.py  web_app_test.py  webapp_test.py
projects/py_helloworld_v2_cli_app/: BUILD.bazel
projects/py_helloworld_v2_cli_app/app/: __main__.py
projects/py_helloworld_v2_cli_app/src/: __main__.py
projects/py_helloworld_v2_cli_app/tests/: test.yaml
projects/py_template_fastapi_app/: BUILD.bazel
projects/py_template_fastapi_app/app/: web_app.py
projects/py_template_fastapi_app/tests/: container_test.yaml  web_app_test.py
projects/template/: BUILD.bazel  TEMPLATE_USAGE.md
projects/template/template_fastapi_app/: .cursorrules  .env.example  .env.example.jinja  .pre-commit-config.yaml  BUILD.bazel  Dockerfile.bazel  ISTIO-SETUP.md  ISTIO-TROUBLESHOOTING.md  MODULE.bazel  RATE-LIMITING.md  README.md  README.md.jinja  SKAFFOLD-USAGE.md  WORKSPACE.bazel  alembic.ini  artifacts.json  build_image.sh.jinja  copier.yml  debug-job-ls.yaml  deploy.sh  docker-compose.yml  mypy.ini  otel-collector-config.yaml  pytest.ini  requirements.txt  run.py  run_migrations.py  skaffold.env  skaffold.sh  skaffold.yaml  skaffold.yaml.jinja  sonar-project.properties  test-rate-limiting.sh  verify-rate-limiting.sh
projects/template/template_gin_app/: .gitignore.jinja  .golangci.yml.jinja  BUILD.bazel.jinja  Dockerfile.bazel.jinja  Dockerfile.jinja  README.md.jinja  copier.yml  go.mod.jinja  main.go.jinja  main_test.go.jinja  skaffold.yaml  skaffold.yaml.jinja  test.sh.jinja
projects/template/template_typer_app/: .gitignore.jinja  .pre-commit-config.yaml.jinja  BUILD.bazel.jinja  Dockerfile.jinja  README.md  README.md.jinja  copier.yml  pyproject.toml.jinja  pytest.ini.jinja  skaffold.yaml  skaffold.yaml.jinja  test.sh.jinja
tools/: BUILD.bazel  README.md  annotation_smoke_test.py  new_project.py  new_project_copier.py  test_copier_templates.sh  test_new_project_copier.py  update_aspect_bazelrc.sh  version_drift.py  version_drift_test.py  workspace_status.sh
tools/pytest/: defs.bzl
tools/scripts/: build_tag_docker.sh  docker_cleanup.sh  docker_images_rmi.sh  make_docker_cleanup.sh  skaffold_container.sh
tools/sonar/: BUILD.bazel  coverage_and_scan.sh  last_project_keys.txt  quality_gate_wait.sh  scan_all.sh
tools/stamping/: stable_status.sh  workspace_status.sh
(+943 files in other folders)
