# See:
# - https://www.youtube.com/watch?v=2Nn71RV_yhI
# - https://bazel.build/external/overview#blzmod
# - https://docs.aspect.build/rules/aspect_bazel_lib/
# - https://github.com/aspect-build/bazel-examples/blob/main/oci_python_image/MODULE.bazel

# Explicitly name the module (recommended for Bazel 8.x)
module(
    name = "monorepo",
    version = "0.1.0",
    compatibility_level = 1,
)

# From https://registry.bazel.build/
# Updated versions for Bazel 8.x compatibility
bazel_dep(name = "aspect_bazel_lib", version = "2.5.1")
bazel_dep(name = "aspect_rules_js", version = "1.38.0")
bazel_dep(name = "aspect_rules_swc", version = "1.1.0")
bazel_dep(name = "aspect_rules_ts", version = "2.1.1")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "platforms", version = "0.0.10")
bazel_dep(name = "rules_pkg", version = "0.9.1")
# bazel_dep(name = "rules_oci", version = "1.7.1") # Commented out per requirements
bazel_dep(name = "container_structure_test", version = "1.15.0")
bazel_dep(name = "rules_proto", version = "5.3.0-21.7")
bazel_dep(name = "rules_python", version = "0.31.0")
# See: https://github.com/bazelbuild/rules_go/blob/master/docs/go/core/bzlmod.md
bazel_dep(name = "rules_go", version = "0.46.0")
bazel_dep(name = "gazelle", version = "0.35.0")
bazel_dep(name = "rules_jvm_external", version = "5.3")

# Register Java toolchain (recommended for Bazel 8.x with rules_jvm_external 6.0)
bazel_dep(name = "rules_java", version = "7.4.0")
# bazel_dep(name = "rules_android", version = "0.1.1", repo_name = "build_bazel_rules_android")

################################################################################
# rules_go
################################################################################

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")

go_deps.module(
    path = "github.com/google/go-cmp",
    sum = "h1:O2Tfq5qg4qc4AmwVlvv0oLiVAGB7enBSJ2x2DqQFi38=",
    version = "v0.5.9",
)

use_repo(go_deps, "com_github_google_go_cmp")

################################################################################
# rules_jvm_external
################################################################################

# Maven POJO
maven_pojo = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven_pojo.install(
    name = "maven_pojo",
    artifacts = [
        "org.apache.logging.log4j:log4j-api:2.20.0",
        "org.apache.logging.log4j:log4j-to-slf4j:2.20.0",
        "org.hamcrest:hamcrest-library:2.2",
        "javax.annotation:javax.annotation-api:1.3.2",
        "junit:junit:4.13.2",
        "com.google.guava:guava:32.1.2-jre",
        "io.grpc:grpc-all:1.51.1",
    ],
    fetch_sources = True,
    fetch_javadoc = False,
    strict_visibility = True,
    repositories = [
        "https://maven.google.com",
        "https://repo1.maven.org/maven2",
        "https://jcenter.bintray.com/",
    ],
    lock_file = "//third_party/java:maven_pojo_install.json",
    use_starlark_android_rules = True,
)
use_repo(maven_pojo, "maven_pojo", "unpinned_maven_pojo")

################################################################################
# rules_python - Python pip dependencies
################################################################################

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    name = "pip_deps",
    requirements_lock = "//third_party/python:requirements_lock_3_11.txt",
)
use_repo(pip, "pip_deps")
