# See:
# - https://www.youtube.com/watch?v=2Nn71RV_yhI
# - https://bazel.build/external/overview#blzmod
# - https://docs.aspect.build/rules/aspect_bazel_lib/
# - https://github.com/aspect-build/bazel-examples/blob/main/oci_python_image/MODULE.bazel

# Explicitly name the module (recommended for Bazel 8.x)
module(
    name = "monorepo",
    version = "0.1.0",
    compatibility_level = 1,
)

# From https://registry.bazel.build/
# Updated versions for Bazel 8.x compatibility
bazel_dep(name = "aspect_bazel_lib", version = "2.5.1")
bazel_dep(name = "aspect_rules_js", version = "1.38.0")
bazel_dep(name = "aspect_rules_swc", version = "1.1.0")
bazel_dep(name = "aspect_rules_ts", version = "2.1.1")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "rules_pkg", version = "1.0.1")

# bazel_dep(name = "rules_oci", version = "1.7.1") # Commented out per requirements
bazel_dep(name = "container_structure_test", version = "1.15.0")
bazel_dep(name = "rules_proto", version = "7.0.2")
bazel_dep(name = "rules_python", version = "0.40.0")

# See: https://github.com/bazelbuild/rules_go/blob/master/docs/go/core/bzlmod.md
bazel_dep(name = "rules_go", version = "0.46.0")
bazel_dep(name = "gazelle", version = "0.35.0")
bazel_dep(name = "rules_jvm_external", version = "6.3")

# Register Java toolchain (recommended for Bazel 8.x with rules_jvm_external 6.0)
bazel_dep(name = "rules_java", version = "8.12.0")
# bazel_dep(name = "rules_android", version = "0.1.1", repo_name = "build_bazel_rules_android")

################################################################################
# rules_go
################################################################################

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.module(
    path = "github.com/google/go-cmp",
    # Align with version present in go.sum of generated project to silence mismatch debug message
    sum = "h1:Khx7svrCpmxxtHBq5j2mp/xVjsi8hQMfNLvJFAlrGgU=",
    version = "v0.5.5",
)
use_repo(go_deps, "com_github_google_go_cmp")

# Add Go web (gin) and testing (testify) dependencies for Go service templates
go_deps.module(
    path = "github.com/gin-gonic/gin",
    sum = "h1:4idEAncQnU5cB7BeOkPtxjfCSye0AAm1R0RVIqJ+Jmg=",
    version = "v1.9.1",  # Keep in sync with template go.mod
)
go_deps.module(
    path = "github.com/stretchr/testify",
    sum = "h1:CcVxjf3Q8PM0mHUKJCdn+eZZtm5yQwehR5yeSVQQcUk=",
    version = "v1.8.4",
)
go_deps.module(
    path = "github.com/ugorji/go/codec",
    sum = "h1:BMaWp1Bb6fHwEtbplGBGJ498wD+LKlNSl25MjdZY4dU=",
    version = "v1.2.11",
)
use_repo(
    go_deps,
    "com_github_gin_gonic_gin",
    "com_github_stretchr_testify",
    "com_github_ugorji_go_codec",
)

# Transitive dependencies for gin framework (explicit to avoid fetch failures)
go_deps.module(
    path = "github.com/gin-contrib/sse",
    sum = "h1:Y/yl/+YNO8GZSjAhjMsSuLt29uWRFHdHYUb5lYOV9qE=",
    version = "v0.1.0",
)
go_deps.module(
    path = "github.com/bytedance/sonic",
    sum = "h1:6iJ6NqdoxCDr6mbY8h18oSO+cShGSMRGCEo7F2h0x8s=",
    version = "v1.9.1",
)
go_deps.module(
    path = "github.com/go-playground/validator/v10",
    sum = "h1:vgvQWe3XCz3gIeFDm/HnTIbj6UGmg/+t63MyGU2n5js=",
    version = "v10.14.0",
)
go_deps.module(
    path = "github.com/pelletier/go-toml/v2",
    sum = "h1:0ctb6s9mE31h0/lhu+J6OPmVeDxJn+kYnJc2jZR9tGQ=",
    version = "v2.0.8",
)
go_deps.module(
    path = "github.com/mattn/go-isatty",
    sum = "h1:JITubQf0MOLdlGRuRq+jtsDlekdYPia9ZFsB8h/APPA=",
    version = "v0.0.19",
)
go_deps.module(
    path = "github.com/gabriel-vasile/mimetype",
    sum = "h1:w5qFW6JKBz9Y393Y4q372O9A7cUSequkh1Q7OhCmWKU=",
    version = "v1.4.2",
)
go_deps.module(
    path = "github.com/leodido/go-urn",
    sum = "h1:XlAE/cm/ms7TE/VMVoduSpNBoyc2dOxHs5MZSwAN63Q=",
    version = "v1.2.4",
)
go_deps.module(
    path = "github.com/klauspost/cpuid/v2",
    sum = "h1:acbojRNwl3o09bUq+yDCtZFc1aiwaAAxtcn8YkZXnvk=",
    version = "v2.2.4",
)
go_deps.module(
    path = "github.com/chenzhuoyu/base64x",
    sum = "h1:qSGYFH7+jGhDF8vLC+iwCD4WpbV1EBDSzWkJODFLams=",
    version = "v0.0.0-20221115062448-fe3a3abad311",
)
go_deps.module(
    path = "google.golang.org/protobuf",
    sum = "h1:kPPoIgf3TsEvrm0PFe15JQ+570QVxYzEvvHqChK+cng=",
    version = "v1.30.0",
)
go_deps.module(
    path = "golang.org/x/net",
    sum = "h1:X2//UzNDwYmtCLn7To6G58Wr6f5ahEAQgKNzv9Y951M=",
    version = "v0.10.0",
)
go_deps.module(
    path = "golang.org/x/sys",
    sum = "h1:EBmGv8NaZBZTWvrbjNoL6HVt+IVy3QDQpJs7VRIw3tU=",
    version = "v0.8.0",
)
go_deps.module(
    path = "golang.org/x/text",
    sum = "h1:2sjJmO8cDvYveuX97RDLsxlyUxLl+GHoLxBiRdHllBE=",
    version = "v0.9.0",
)
go_deps.module(
    path = "gopkg.in/yaml.v3",
    sum = "h1:fxVm/GzAzEWqLHuvctI91KS9hhNmmWOoWu0XTYJS7CA=",
    version = "v3.0.1",
)
go_deps.module(
    path = "golang.org/x/crypto",
    sum = "h1:LF6fAI+IutBocDJ2OT0Q1g8plpYljMZ4+lty+dsqw3g=",
    version = "v0.9.0",
)
go_deps.module(
    path = "github.com/go-playground/universal-translator",
    sum = "h1:Bcnm0ZwsGyWbCzImXv+pAJnYK9S473LQFuzCbDbfSFY=",
    version = "v0.18.1",
)
go_deps.module(
    path = "github.com/go-playground/locales",
    sum = "h1:EWaQ/wswjilfKLTECiXz7Rh+3BjFhfDFKv/oXslEjJA=",
    version = "v0.14.1",
)
go_deps.module(
    path = "github.com/davecgh/go-spew",
    sum = "h1:vj9j/u1bqnvCEfJOwUhtlOARqs3+rkHYY13jYWTU97c=",
    version = "v1.1.1",
)
go_deps.module(
    path = "github.com/pmezard/go-difflib",
    sum = "h1:4DBwDE0NGyQoBHbLQYPwSUPoCMWR5BEzIk/f1lZbAQM=",
    version = "v1.0.0",
)
use_repo(
    go_deps,
    "com_github_bytedance_sonic",
    "com_github_chenzhuoyu_base64x",
    "com_github_davecgh_go_spew",
    "com_github_gabriel_vasile_mimetype",
    "com_github_gin_contrib_sse",
    "com_github_go_playground_locales",
    "com_github_go_playground_universal_translator",
    "com_github_go_playground_validator_v10",
    "com_github_klauspost_cpuid_v2",
    "com_github_leodido_go_urn",
    "com_github_mattn_go_isatty",
    "com_github_pelletier_go_toml_v2",
    "com_github_pmezard_go_difflib",
    "in_gopkg_yaml_v3",
    "org_golang_google_protobuf",
    "org_golang_x_net",
    "org_golang_x_sys",
    "org_golang_x_text",
)

################################################################################
# rules_jvm_external
################################################################################

# Maven POJO
maven_pojo = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven_pojo.install(
    name = "maven_pojo",
    artifacts = [
        "org.apache.logging.log4j:log4j-api:2.20.0",
        "org.apache.logging.log4j:log4j-to-slf4j:2.20.0",
        "org.hamcrest:hamcrest-library:2.2",
        "javax.annotation:javax.annotation-api:1.3.2",
        "junit:junit:4.13.2",
        "com.google.guava:guava:32.1.2-jre",
        "io.grpc:grpc-all:1.51.1",
    ],
    fetch_javadoc = False,
    fetch_sources = True,
    lock_file = "//third_party/java:maven_pojo_install.json",
    repositories = [
        "https://maven.google.com",
        "https://repo1.maven.org/maven2",
        "https://jcenter.bintray.com/",
    ],
    strict_visibility = True,
    use_starlark_android_rules = True,
)
use_repo(maven_pojo, "maven_pojo", "unpinned_maven_pojo")

################################################################################
# rules_python - Python pip dependencies
################################################################################

# Using simplified syntax for rules_python 0.40.0
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.11",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip",
    python_version = "3.11",
    requirements_lock = "//third_party/python:requirements_lock_3_11.txt",
)
use_repo(pip, "pip")

register_toolchains("@rules_python//python:all")
