# Declares that this directory is the root of a Bazel workspace.
# See https://docs.bazel.build/versions/main/build-ref.html#workspace
workspace(
    # How this workspace would be referenced with absolute labels from another workspace
    name = "monorepo",
)

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
  name = "rules_python",
  sha256 = "863ba0fa944319f7e3d695711427d9ad80ba92c6edd0b7c7443b84e904689539",
  strip_prefix = "rules_python-0.22.0",
  url = "https://github.com/bazelbuild/rules_python/releases/download/0.22.0/rules_python-0.22.0.tar.gz",
)

# Future migration https://github.com/bazel-contrib/rules_oci
# http_archive(
#   name = "io_bazel_rules_docker",
#   sha256 = "b1e80761a8a8243d03ebca8845e9cc1ba6c82ce7c5179ce2b295cd36f7e394bf",
#   urls = ["https://github.com/bazelbuild/rules_docker/releases/download/v0.25.0/rules_docker-v0.25.0.tar.gz"],
# )



### Python Setup (https://github.com/bazelbuild/rules_python/blob/main/examples/pip_install/WORKSPACE)
### Goal: Hermeticity (https://bazel.build/basics/hermeticity)
# load("@rules_python//python:repositories.bzl", "py_repositories")
load("@rules_python//python:repositories.bzl", "py_repositories", "python_register_multi_toolchains")

py_repositories()

load("@rules_python//python/pip_install:repositories.bzl", "pip_install_dependencies")

pip_install_dependencies()

default_python_version = "3.10"

python_register_multi_toolchains(
    name = "python",
    default_version = default_python_version,
    python_versions = [
        "3.11",
        "3.10",
        "3.9",
        "3.8",
    ],
    register_coverage_tool = True,
)

load("@python//:pip.bzl", "multi_pip_parse")
load("@python//3.11:defs.bzl", interpreter_3_11 = "interpreter")
load("@python//3.10:defs.bzl", interpreter_3_10 = "interpreter")
load("@python//3.9:defs.bzl", interpreter_3_9 = "interpreter")
load("@python//3.8:defs.bzl", interpreter_3_8 = "interpreter")

multi_pip_parse(
    name = "pip_deps",
    default_version = default_python_version,
    python_interpreter_target = {
        "3.11": interpreter_3_11,
        "3.10": interpreter_3_10,
        "3.9": interpreter_3_9,
        "3.8": interpreter_3_8,
    },
    requirements_lock = {
        "3.11": "//third_party/python:requirements_lock_3_11.txt",
        "3.10": "//third_party/python:requirements_lock_3_10.txt",
        "3.9": "//third_party/python:requirements_lock_3_9.txt",
        "3.8": "//third_party/python:requirements_lock_3_8.txt",
    },
    # extra_pip_args = [
    #     "--extra-index-url", "https://pip.corp.flyrlabs.com/repo"
    # ],
    #download_only = True,
)

load("@pip_deps//:requirements.bzl", "install_deps")

install_deps()



### Docker Setup
# load("@io_bazel_rules_docker//repositories:repositories.bzl", container_repositories = "repositories")

# container_repositories()

# load("@io_bazel_rules_docker//repositories:deps.bzl", container_deps = "deps")

# container_deps()

### Loading base docker images for different languages

# load("@io_bazel_rules_docker//python3:image.bzl", _py_image_repos = "repositories")

# _py_image_repos()

# load("@io_bazel_rules_docker//go:image.bzl", _go_image_repos = "repositories")

# _go_image_repos()

# load("@io_bazel_rules_docker//nodejs:image.bzl", _nodejs_image_repos = "repositories")

# _nodejs_image_repos()

# load(
#   "@io_bazel_rules_docker//container:container.bzl",
#   "container_pull",
# )

# container_pull(
#   name = "go_base_image",
#   registry = "registry.hub.docker.com",
#   repository = "library/golang",
#   # 'tag' is also supported, but digest is encouraged for reproducibility.
#   # tag = 1.18.8-alpine3.16
#   digest = "sha256:6b494c932ee8c209631e27521ddbe364da56e7f1275998fbb182447d20103e46",
# )

# load("@io_bazel_rules_docker//contrib:dockerfile_build.bzl", "dockerfile_image")

# dockerfile_image(
#   name = "custom_go_web_dockerfile",
#   dockerfile = "//projects/go_web:Dockerfile",
# )



# build:
#   targets:
#   - //my-app:image
#   - //my-other-app:image