load("@rules_python//python:defs.bzl", "py_library")

py_library(
    name = "calculator_lib",
    srcs = ["calculator.py"],
    # visibility = ["//projects/python-flask:__pkg__"],
    visibility = ["//visibility:public"],
)

py_test(
    name = "calculator_test",
    srcs = ["calculator_test.py"],
    deps = [
        "//libs/calculator:calculator_lib",
    ],
)
